--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,23 @@
-# Node.js dependencies
-node_modules/
-
-# Build output
-dist/
-build/
-
-# Development files
+# System files
 .DS_Store
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-logs/
-*.log
+Thumbs.db
 
 # Editor directories and files
 .idea/
 .vscode/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+*.swp
+*.swo
 
-# Chrome extension packaging
-*.crx
-*.pem
+# Node modules if you add package.json later
+node_modules/
+
+# Logs
+*.log
+
+# Build artifacts
+dist/
+
+# Chrome Extension packaging
 *.zip
-
-# Temporary files
-tmp/
-temp/ 
+*.crx
+*.pem 
