--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 3,
   "name": "WatchLater Zap",
-  "version": "1.0",
+  "version": "2.05.25",
   "description": "Delete all YouTube Watch Later videos in one click.",
+  "author": "Tony Fiston",
   "permissions": ["scripting", "activeTab"],
   "host_permissions": [
     "https://www.youtube.com/*"
